$Id: CHANGES,v 1.4 1997/10/23 20:52:01 lf Exp $

10/23/97	radvd will now accept any prefix length in its config
		file but will warn about unusual ones

10/19/97	Removed backwards compatibility code in recv.c.
		IPV6_HOPLIMIT support is now assumed to exist.

10/19/97	Fixed alignment problems in recv.c and send.c.

10/16/97	the Makefile install target now uses mkinstalldirs.

10/16/97	changed all u_int*_t to uint*_t for better POSIX
		compliance and portability. Needs 2.1.57-CVS or glibc.
		BSD seems to need patches.

10/16/97	more intelligent configure; tries to figure out
		where the IPv6 libraries and inclues are (if not in
		the standard places). Searches in /usr/inet6 and /usr/ipv6.

10/15/97	integrated small patches for glibc and BSD from Craig and
		Philip

09/14/97	EUI-64 "support"

09/01/97	centralized all includes into includes.h for easier
		maintainance

08/25/97	changed all occurences of IPV6_TXINFO/IPV6_RXINFO
		to IPV6_PKTINFO

08/25/97	removed some compatibility stuff for older Linux kernels

03/17/97	changed linux/if_arp.h to net/if_arp.h in device-linux.c
		and configure.in (for glibc compatibility)

03/17/97	integrated patch from Philip Blundell <pjb27@cam.ac.uk>
		into configure.in to check for inet_* in libc first and
		then for libinet6 (for glibc compatibility).

03/16/97	corrected small error in radvd.conf(5) man page and other
		small changes

03/16/97	removed linklocal.c source file from the distribution
		because it wasn't used anymore

03/16/97	added html version of the INTRO, removed ascii version.

02/12/97	missing directories are now created on make install

01/19/97	now also the rest of a line followed by a '#' is treated
		as a comment in the config file

01/16/97	added IPPROTO_IPV6/IPV6_HOPLIMIT support, so now incoming
		RS' and RAs are checked if there hoplimit is 255 (on Linux
		this only works with kernel version 2.1.21 and above)

01/15/97	lots of portability cleanups; radvd is now using autoconf