@@ -1,6 +1,6 @@
 #
-# $Id: VERSION,v 1.5 1997/10/23 20:52:02 lf Exp $
+# $Id: VERSION,v 1.6 1998/03/03 14:54:21 lf Exp $
 #
 # this file is automatically processed by configure
 #
-0.4.1
+0.4.2
