@@ -1,5 +1,5 @@
 /*
- *   $Id: device-linux.c,v 1.2 1997/10/23 20:52:03 lf Exp $
+ *   $Id: device-linux.c,v 1.3 1998/03/03 14:54:22 lf Exp $
  *
  *   Authors:
  *    Lars Fenneberg		<lf@elemental.net>	 
@@ -153,4 +153,24 @@ int setup_linklocal_addr(int sock, struct Interface *iface)
 	log(LOG_ERR, "no linklocal address configured for %s", iface->Name);
 	fclose(fp);
 	return (-1);
+}
+
+int setup_allrouters_membership(int sock, struct Interface *iface)
+{
+	struct ipv6_mreq mreq;                  
+	
+	memset(&mreq, 0, sizeof(mreq));                  
+	mreq.ipv6mr_ifindex = iface->if_index;
+	
+	/* ipv6-allrouters: ff02::2 */
+	mreq.ipv6mr_multiaddr.s6_addr32[0] = htonl(0xFF020000);                                          
+	mreq.ipv6mr_multiaddr.s6_addr32[3] = htonl(0x2);     
+
+	if (setsockopt(sock, SOL_IPV6, IPV6_ADD_MEMBERSHIP, &mreq, sizeof(&mreq)) < 0)
+	{
+		log(LOG_ERR, "can't join ipv6-allrouters on %s", iface->Name);
+		return (-1);
+	}
+
+	return (0);
 }
