@@ -1,7 +1,7 @@
 /* A lexical scanner generated by flex */
 
 /* Scanner skeleton version:
- * $Header: /work/cvsroot/radvd/Attic/lex.yy.c,v 1.5 1997/10/18 14:16:09 lf Exp $
+ * $Header: /work/cvsroot/radvd/Attic/lex.yy.c,v 1.6 1998/03/03 14:54:23 lf Exp $
  */
 
 #define FLEX_SCANNER
@@ -578,7 +578,7 @@ char *yytext;
 #line 1 "scanner.l"
 #define INITIAL 0
 /*
- *   $Id: lex.yy.c,v 1.5 1997/10/18 14:16:09 lf Exp $
+ *   $Id: lex.yy.c,v 1.6 1998/03/03 14:54:23 lf Exp $
  *
  *   Authors:
  *    Pedro Roque		<roque@di.fc.ul.pt>
