@@ -1,4 +1,7 @@
-$Id: CHANGES,v 1.4 1997/10/23 20:52:01 lf Exp $
+$Id: CHANGES,v 1.5 1998/03/03 14:54:20 lf Exp $
+
+03/03/98	radvd now joins ipv6-allrouters on Linux.  Fix contributed
+		by A.N.Kuznetsov <kuznet@ms2.inr.ac.ru>.
 
 10/23/97	radvd will now accept any prefix length in its config
 		file but will warn about unusual ones
